--- a/appsettings.json
+++ b/appsettings.json
@@ -28,12 +28,12 @@
       "ArtccBoundariesGeoJson": "https://raw.githubusercontent.com/vatsimnetwork/vatspy-data-project/master/Boundaries.geojson",
       "VnasApiEndpoint": "https://data-api.vnas.vatsim.net/api",
       "VatsimApiEndpoint": "https://api.vatsim.net/v2",
-      "AliasTextFile": "https://data-api.vnas.vatsim.net/Files/Aliases/ZOA.txt",
+      "AliasTextFile": "https://data-api.vnas.vatsim.net/Files/Aliases/ZMA.txt",
       "VatspyData": "https://raw.githubusercontent.com/vatsimnetwork/vatspy-data-project/master/VATSpy.dat",
       "LocalAirpotsDat": "https://raw.githubusercontent.com/vzoa/info-tool-web/master/Assets/Data/v1/local_airports.dat",
-      "LoaFile": "https://raw.githubusercontent.com/vzoa/info-tool-web/master/Assets/Data/v1/loa.csv",
-      "ZoaDocumentsApiEndpoint": "https://oakartcc.org/api/v1/procedures",
-      "ScratchpadsJson": "https://raw.githubusercontent.com/vzoa/info-tool-web/master/Assets/Data/v1/scratchpads.json",
+      "LoaFile": "https://raw.githubusercontent.com/vZMA/info-tool-web-data/refs/heads/main/loa.csv",
+      "ZoaDocumentsApiEndpoint": "https://api.zmaartcc.net/api/v1/procedures",
+      "ScratchpadsJson": "https://raw.githubusercontent.com/vZMA/info-tool-web-data/refs/heads/main/scratchpads.json",
       "CskoRouteBase": "https://flight-plans.csko.hu/v1/flight_plan?"
     },
     "CacheTtls": {
@@ -45,37 +45,45 @@
     },
     "ArtccAirports": {
       "Bravos": [
-        "KSFO"
+        "KMIA",
+        "KTPA"
       ],
       "Charlies": [
-        "KOAK",
-        "KSJC",
-        "KSMF",
-        "KRNO",
-        "KFAT",
-        "KMRY",
-        "KBAB"
+        "KFLL",
+        "KPBI",
+        "KRSW",
+        "KSRQ"
       ],
       "Deltas": [
-        "KAPC",
-        "KCCR",
-        "KCIC",
-        "KHWD",
-        "KLVK",
-        "KMER",
-        "KMHR",
-        "KMOD",
-        "KNUQ",
-        "KPAO",
-        "KRDD",
-        "KRHV",
-        "KSAC",
-        "KSCK",
-        "KSNS",
-        "KSQL",
-        "KSTS",
-        "KSUU",
-        "KTRK"
+        "KAPF",
+        "KBCT",
+        "KBKV",
+        "KBOW",
+        "KEYW",
+        "KFPR",
+        "KFXE",
+        "KFMY",
+        "KHST",
+        "KHWO",
+        "KLAL",
+        "KMCF",
+        "KNQX",
+        "KOPF",
+        "KPGD",
+        "KPIE",
+        "KPMP",
+        "KSPG",
+        "KSUA",
+        "KTMB",
+        "KVRB"
+      ],
+      "AtisTargetAirports": [
+        "KMIA",
+        "KFLL",
+        "KPBI",
+        "KTPA",
+        "KRSW",
+        "KSRQ"
       ]
     },
     "CustomDocuments": [
