--- a/appsettings.json
+++ b/appsettings.json
@@ -86,21 +86,7 @@
         "KSRQ"
       ]
     },
-    "CustomDocuments": [
-      {
-        "Name": "Quick Reference",
-        "Documents": [
-          {
-            "Name": "NCT DVAs",
-            "Url": "https://oakartcc.org/controllers/file/e4b8e76c-dba4-11ea-844f-2a32edb55910"
-          },
-          {
-            "Name": "Class D Towers Equipment/Procedures",
-            "Url": "https://oakartcc.org/controllers/file/d6238493-ad9f-11ef-a1be-2a32edb55910"
-          }
-        ]
-      }
-    ]
+    "CustomDocuments": []
   },
   "AllowedHosts": "*"
 }
